<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <!-- music top -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@drawable/bg_rounded">

        <TextView
            style="@style/titleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/music"
            android:textSize="20sp" />

    </RelativeLayout>

    <!-- music content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="620dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/dimen30"
            android:paddingBottom="60dp"
            android:paddingStart="@dimen/dimen50"
            android:paddingEnd="@dimen/dimen50">

            <!-- song 1 (Westlife - Flying Without Wings) -->
            <TextView
                style="@style/titleSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/westlife_flying_without_wings"
                android:layout_marginBottom="@dimen/dimen10"
                android:textSize="12sp"
                android:textFontWeight="800"
                tools:targetApi="p" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="@dimen/dimen5"
                android:layout_marginBottom="@dimen/dimen20"
                android:clickable="false">

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    app:videoId="fZOW8ZuLG2o"
                    app:autoPlay="false" />

            </androidx.cardview.widget.CardView>

            <!-- song 2 (Westlife - Better Man)-->
            <TextView
                style="@style/titleSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/westlife_better_man"
                android:layout_marginTop="@dimen/dimen10"
                android:layout_marginBottom="@dimen/dimen10"
                android:textSize="12sp"
                android:textFontWeight="800"
                tools:targetApi="p" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="@dimen/dimen5"
                android:layout_marginBottom="@dimen/dimen20"
                android:clickable="false">

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    app:videoId="ZEQOE1oZQ-4"
                    app:autoPlay="false" />

            </androidx.cardview.widget.CardView>

            <!-- song 3 (Westlife - My Love)-->
            <TextView
                style="@style/titleSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/westlife_my_love"
                android:layout_marginTop="@dimen/dimen10"
                android:layout_marginBottom="@dimen/dimen10"
                android:textSize="12sp"
                android:textFontWeight="800"
                tools:targetApi="p" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="@dimen/dimen5"
                android:layout_marginBottom="@dimen/dimen20"
                android:clickable="false">

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    app:videoId="ulOb9gIGGd0"
                    app:autoPlay="false" />

            </androidx.cardview.widget.CardView>

            <!-- song 4 (Westlife - I Have a Dream)-->
            <TextView
                style="@style/titleSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/westlife_i_have_a_dream"
                android:layout_marginTop="@dimen/dimen10"
                android:layout_marginBottom="@dimen/dimen10"
                android:textSize="12sp"
                android:textFontWeight="800"
                tools:targetApi="p" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="@dimen/dimen5"
                android:layout_marginBottom="@dimen/dimen20"
                android:clickable="false">

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    app:videoId="_HkL8GuU9_0"
                    app:autoPlay="false" />

            </androidx.cardview.widget.CardView>

            <!-- song 5 -->
            <TextView
                style="@style/titleSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/westlife_when_you_tell_me_that_you_love_me"
                android:layout_marginTop="@dimen/dimen10"
                android:layout_marginBottom="@dimen/dimen10"
                android:textSize="12sp"
                android:textFontWeight="800"
                tools:targetApi="p" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="@dimen/dimen5"
                android:layout_marginBottom="@dimen/dimen20"
                android:clickable="false">

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    app:videoId="MwSL-57pNqM"
                    app:autoPlay="false" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>